[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/UI/CardPicker/CardPicker.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 178.781, 276 )

[node name="CardPicker" type="Node2D"]
script = ExtResource( 1 )

[node name="Card1" type="Node2D" parent="."]
position = Vector2( 368, 576 )

[node name="Area2D" type="Area2D" parent="Card1"]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Card1/Area2D"]
shape = SubResource( 1 )

[node name="Card2" type="Node2D" parent="."]
position = Vector2( 912, 576 )

[node name="Area2D" type="Area2D" parent="Card2"]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Card2/Area2D"]
shape = SubResource( 1 )

[node name="Card3" type="Node2D" parent="."]
position = Vector2( 1424, 584 )

[node name="Area2D" type="Area2D" parent="Card3"]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Card3/Area2D"]
shape = SubResource( 1 )

[connection signal="input_event" from="Card1/Area2D" to="." method="_on_card1_input_event"]
[connection signal="mouse_entered" from="Card1/Area2D" to="." method="_on_card1_mouse_entered"]
[connection signal="mouse_exited" from="Card1/Area2D" to="." method="_on_card1_mouse_exited"]
[connection signal="input_event" from="Card2/Area2D" to="." method="_on_card2_input_event"]
[connection signal="mouse_entered" from="Card2/Area2D" to="." method="_on_card2_mouse_entered"]
[connection signal="mouse_exited" from="Card2/Area2D" to="." method="_on_card2_mouse_exited"]
[connection signal="input_event" from="Card3/Area2D" to="." method="_on_card3_input_event"]
[connection signal="mouse_entered" from="Card3/Area2D" to="." method="_on_card3_mouse_entered"]
[connection signal="mouse_exited" from="Card3/Area2D" to="." method="_on_card3_mouse_exited"]
